<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rechargeplans.RechargePlansActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/large_padding"
        app:layout_constraintBottom_toTopOf="@+id/ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/recharge_plans"
                android:layout_marginEnd="@dimen/medium_padding"
                android:src="@drawable/ic_recharge_plans"
                app:tint="@color/color_primary" />

            <Spinner
                android:id="@+id/spinner_plans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_padding"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/medium_padding"
                android:contentDescription="@string/number_location"
                android:src="@drawable/ic_number_location"
                app:tint="@color/color_primary" />

            <Spinner
                android:id="@+id/spinner_cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:textColor="@color/white"
            android:background="@color/color_primary"
            android:textStyle="bold"
            android:layout_marginHorizontal="@dimen/default_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_plans" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/small_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ad_banner_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>