<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.numberlocation.NumberLocationActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        app:cardBackgroundColor="@color/color_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="@dimen/small_padding"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:padding="@dimen/small_padding"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hbb20.CountryCodePicker
                android:layout_width="140dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_phone_number"
                android:background="@null"
                android:layout_width="0dp"
                android:hint="@string/enter_mobile_number"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:imeOptions="actionSearch"
                android:layout_weight="1" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_globe"
        android:contentDescription="@string/earth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ad"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:paddingBottom="@dimen/small_padding">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_banner_view"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>