<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_secondary"
    tools:context=".ui.streetview.StreetViewActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_famous_places"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/color_secondary_variant"
        app:cardCornerRadius="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/btn_seven_wonders"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/medium_padding">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cardBackgroundColor="@color/color_primary"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/tool_icon"
                    android:src="@drawable/ic_number_location"
                    app:tint="@color/white" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/famous_places"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_seven_wonders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/color_secondary_variant"
        app:cardCornerRadius="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@id/ad"
        app:layout_constraintEnd_toEndOf="@id/btn_famous_places"
        app:layout_constraintStart_toStartOf="@id/btn_famous_places"
        app:layout_constraintTop_toBottomOf="@id/btn_famous_places"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/medium_padding">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cardBackgroundColor="@color/color_primary"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/tool_icon"
                    android:src="@drawable/ic_number_location"
                    app:tint="@color/white" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/seven_wonders"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <LinearLayout
        android:id="@+id/ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ad_banner_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>